--- a/substrate/wrapper.adoc
+++ b/substrate/wrapper.adoc
@@ -18,7 +18,7 @@ Substrate also provides a generic `Block` struct that implements the
 Substrate makes some assumptions about terminologies. Block header
 data is always either directly from state processing, or sealable by
 consensus engines. All external inputs are put in block bodies,
-groupped as "extrinsics", where unsigned ones are called "inherents",
+grouped as "extrinsics", where unsigned ones are called "inherents",
 and signed ones are called "transactions". This design sometimes
 cannot directly be translated from blockchains that weren't designed
 with Substrate in mind. For example, Ethereum's block extra data is an
